# personal-finance-tracker

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  queries.py  requirements.txt
.github/workflows/: test.yml
migrations/: env.py
migrations/versions/: 41cc57bc1b3e_add_account_name_to_balances.py  572f480d25f4_initial_schema.py
src/: bank_client.py  categorization_agent.py  config.py  dashboard.html  dashboard.py  deploy_watcher.py  embedder.py  fetcher.py  mcp_server.py  processor.py  queries.py  scheduler.py  storage.py  test.ipynb
src/prompts/: categorization_system_prompt.txt
tests/: README.md  conftest.py  test_categorization.py  test_fetcher.py  test_processor.py  test_queries.py
