[project]
name = "personal-finance-tracker"
version = "0.2.0"
description = "Self-hosted personal finance tracker with PSD2 bank integration and AI categorization"
authors = [
    {name = "Soós Gábor"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic (==1.18.5)",
    "anthropic (==0.111.0)",
    "cryptography (==48.0.0)",
    "fastapi (==0.138.1)",
    "mcp (==1.28.0)",
    "openai (==2.43.0)",
    "pydantic (==2.13.4)",
    "pydantic-settings (==2.14.1)",
    "pyjwt (==2.12.1)",
    "python-dotenv (==1.2.2)",
    "requests (==2.34.2)",
    "sqlalchemy (==2.0.51)",
    "sqlite-vec (==0.1.9)",
    "uvicorn (==0.49.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false


[tool.pytest.ini_options]
    pythonpath = ["src"]
    testpaths = ["tests"]


[dependency-groups]
dev = [
    "pytest (==9.1.1)",
    "pytest-mock (==3.15.1)"
]